fix double scrolling on page container

--- a/docs/src/stylesheets/theme/root.scss
+++ b/docs/src/stylesheets/theme/root.scss
@@ -44,8 +44,8 @@ body {
 }
 
 #__docusaurus {
-  overflow-x: hidden;
-  overflow-y: auto;
+  // overflow-x: hidden;
+  // overflow-y: auto;
   height: 100vh;
 	// min-height: 100%;
   display: flex;
